--- a/locks-portofolio/src/components/SocilaMedia/socilmedia.css
+++ b/locks-portofolio/src/components/SocilaMedia/socilmedia.css
@@ -1,3 +1,8 @@
+.socialMedia{
+    display: flex;
+    flex-direction: row-reverse;
+}
+
 a.socialMediaIcon{
     color: #181c2e;
     margin-top: 10px;
