--- a/locks-portofolio/src/App.css
+++ b/locks-portofolio/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&family=Roboto:wght@300;400;500;700;900&display=swap');
 
 *{
   margin: 0;
@@ -13,7 +13,6 @@ html, body, #root{
 body{
   font-size: 14px;
   font-family: 'Roboto', sans-serif;
-  background-color: rgb(224, 224, 224);
 }
 
 a{
@@ -24,4 +23,19 @@ ul{
 }
 button{
   cursor: pointer;
+}
+h1{
+  font-size: 2.5em;
+  font-weight: 600;
+  margin: 0 0 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+h2{
+  font-size: 2em;
+  font-weight: 600;
+  margin: 20px 0 10px;
+  font-family: 'Open Sans', sans-serif;
+}
+.hidden{
+  display: none;
 }
