--- a/locks-portofolio/src/components/About/about.css
+++ b/locks-portofolio/src/components/About/about.css
@@ -1,10 +1,11 @@
+.holder-about{
+}
 .aboutme{
-    margin: 2vh 0;
+    margin: 3vh auto;
+    max-width: 900px;
+    padding: 0 20px;
 }
 .aboutme h1{
-    font-size: 2em;
-    font-weight: 900;
-    margin: 10px 0;
 }
 .aboutme p{
     font-size: 1em;
