--- a/locks-portofolio/src/components/Depoiments/depoiments.css
+++ b/locks-portofolio/src/components/Depoiments/depoiments.css
@@ -1,16 +1,27 @@
-.referral{
-    margin: 2vh 0;
+.holder-referral{
+    background-color: rgb(224, 224, 224);
 }
-
+.referral{
+    margin: 2vh auto;
+    max-width: 900px;
+    padding: 0 20px;
+}
+.holder-depoimento{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-height: 300px;
+    height: 100%;
+}
+.slick-slide{
+    padding: 0 5px;
+}
 .boxReferral{
-    max-width: 50%;
-    display: inline-block;
     vertical-align: top;
-    margin: 1vh 1vw;
     background-color: #fff;
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 5px 10px 10px #ccc;
 }
 
 .imgReferral{
@@ -31,4 +42,12 @@
 .depoiment{
     margin: 20px 0;
     text-align: justify;
+}
+@media(max-width:980px){
+    .referral .slick-next{
+        right: -18px;
+    }
+    .referral .slick-prev {
+        left: -18px;
+    }
 }
