--- a/locks-portofolio/src/components/Contact/contact.css
+++ b/locks-portofolio/src/components/Contact/contact.css
@@ -1,21 +1,95 @@
 .holder-contact{
-}
-.contact{
     margin: 2vh auto;
     max-width: 900px;
     padding: 0 20px;
+    width: 100%;
 }
-.contact div{
+.contact{
+}
+.holder-contact .flex{
     display: flex;
     flex-direction: row;
-    align-items: center;
+    flex-wrap: wrap;
 }
-.contact img,
+.holder-contact h1{
+    flex: 1;
+    width: 100%;
+}
+.contact,
+.holder-contact form{
+    flex: 1;
+    max-width: 100%;
+    display: inline-block;
+    vertical-align: top;
+}
 .contact span{
     margin: 2vh 10px;
+    display: inline-block;
+    vertical-align: middle;
 }
-.contact img{
-    max-width: 100px;
-    border-radius: 100px;
-    border:solid 3px #000;
+.contact .socialMedia{
+    flex-direction: row;
+    margin-left: 10px;
+}
+.holder-contact form{
+    margin-top: 1.5em;
+}
+
+.holder-contact input{
+    margin-bottom: 15px;
+    border-radius: 7px;
+    width: 100%;
+    padding: 10px;
+    font-size: 15px;
+    border: solid 1px #000;
+    background-color: #e0e0e0;
+    padding: 10px;
+}
+.holder-contact textarea{
+    min-height: 140px;
+    width: 100%;
+    resize: none;
+    padding: 10px;
+    background-color: #e0e0e0;
+}
+.holder-contact label{
+    display: block;
+    font-size: 1.3em;
+    font-weight: bold;
+}
+.holder-contact form input[type=submit] {
+    border: 0;
+    height: auto;
+    padding: 10px;
+    max-width: 130px;
+    margin: 10px 0;
+    border-radius: 7px;
+    background-color: #181c2e;
+    color: #FFF;
+    font-size: 1.3em;
+    display: block;
+    float: right;
+}
+@media (max-width:768px){
+    .holder-contact .flex,
+    .contact div{
+        display: block;
+    }
+    .contact .socialMedia{
+        margin: 10px auto;
+        max-width: 300px;
+        text-align: center;
+        font-size: 1.5em;
+    }
+    .contact{
+        width: 100%;
+    }
+    .contact img{
+        margin: 2vh auto;
+    }
+    .contact span{
+        display: inline-block;
+        width: 44%;
+        text-align: center;
+    }
 }
