--- a/locks-portofolio/src/components/Header/header.css
+++ b/locks-portofolio/src/components/Header/header.css
@@ -1,19 +1,22 @@
-ul{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    max-width: 500px;
-}
-li{
-    margin: 0 10px;
-}
-
 .icon-header{
     background-color: transparent;
     font-size: 1em;
 }
-
 .lucas-image img{
     max-width: 120px;
     border-radius: 100px;
+}
+@media(max-width:768px){
+    div img{
+        margin: 0 auto;
+        display: block;
+    }
+    ul{
+        max-width: 80vw;
+        margin: 20px auto;
+        flex-direction: column;
+    }
+    .icon-header{
+        margin: 0px auto;
+    }
 }
