--- a/locks-portofolio/src/pages/Cv/cv.css
+++ b/locks-portofolio/src/pages/Cv/cv.css
@@ -1,69 +1,46 @@
-
-.container-center{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10vh 0;
+.holder-cv{
+  max-width: 900px;
+  margin: 2vh auto;
+  display: flex;
+  flex-direction: column;
+}
+.holder-cv div{
+  margin: 10px 0;
+}
+.holder-cv div ul{
+  display: block;
+  padding-left: 10px;
+  width: 100%;
+  max-width: 100%;
+}
+.holder-cv div li{
+  line-height: 140%;
+  display: block;
+  margin-top: 5px;
+}
+.holder-cv div li::before{
+  content:'>';
+  margin: 0 10px 0 -16px;
+  font-weight: bold;
+  color: #555974;
+  font-size: 1.5em;
+}
+.holder-cv h2{
+  font-style: italic;
+  margin: 0 0 10px;
+}
+.holder-cv h3{
+  font-style: italic;
+  font-size: 1.5em;
+  margin: 0 0 10px;
+}
+.holder-cv h4{
+  font-style: italic;
+  font-size: 1.2em;
+  margin: 10px 0;
+}
+@media (max-width:768px){
+  .holder-cv{
+    padding: 0 20px;
   }
-  
-  .login{
-    background: #EAEAEC;
-    width: 600px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
-  
-  .login-area{
-    display: flex;
-    justify-content: center;
-    background-color: #181c2e;
-    width: 100%;
-  }
-  
-  .login-area img{
-    padding: 20px;
-    width: 170px;
-    height: 130px;
-  }
-  
-  form{
-    margin-top: 1.5em;
-    width: 90%;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  form h1{
-    text-align: center;
-    margin-bottom: 0.5em;
-    color: #181c2e;
-  }
-  
-  .login input{
-    margin-bottom: 15px;
-    height: 35px;
-    border:0;
-    border-radius: 7px;
-    padding: 10px;
-    font-size: 15px;
-    background-color: #FFF;
-  }
-  
-  form button{
-    height: 35px;
-    border:0;
-    border-radius: 7px;
-    background-color: #181c2e;
-    color: #FFF;
-    font-size: 1.3em;
-  }
-  
-  .login a{
-    margin: 1.5em 0;
-    color: #000;
-    cursor: pointer;
-  }
-  
-  
+}
