--- a/locks-portofolio/src/components/Knowledge/knowledge.css
+++ b/locks-portofolio/src/components/Knowledge/knowledge.css
@@ -28,6 +28,11 @@ svg.icon{
     margin: 1vh auto;
     display: block;
 }
+.slick-prev:before,
+.slick-next:before{
+    color: #000;
+    font-size: 30px;
+}
 @media(max-width:980px){
     .knowledge .slick-next{
         right: 15px;
